タイトルの表示修正と、フッターロゴのリニューアル

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRESSING ROOM - Novel Collection</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="nav">
@@ -99,17 +101,11 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-logo">DRESSING ROOM</div>
+        <a href="#" class="footer-logo">DRESSING ROOM</a>
         <p class="footer-text">Novel Collection 2025</p>
     </footer>
 
-    <script>
-        // Cursor Glow Effect
-        const cursor = document.getElementById('cursor');
-        document.addEventListener('mousemove', (e) => {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
+
 </html>
