--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="hero-content">
-            <p class="hero-label">Novel Collection inspired by Natori</p>
+            <p class="hero-label">Novel Collection<br class="sp-only">inspired by Natori</p>
             <h1 class="hero-title">DRESSING<br>ROOM</h1>
             <p class="hero-subtitle">なとりの歌詞をリファレンスにした小説サイト<br>DRESSING ROOMの中に、物語がある。</p>
         </div>
