Restore Safari/iPhone fixes and add viewport-fit=cover

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>DRESSING ROOM - Novel Collection</title>
     <meta name="description"
         content="なとりの歌詞を解釈し、フレーズをリファレンスにAIと共作した短編小説を掲載。『Dressing Room』の世界観に着想を得たページデザインで構成された創作サイト。">
